--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,13 @@
   "background_color": "#fff",
   "description": "A web game.",
   "icons": [{
-    "src": "images/touch/homescreen48.png",
-    "sizes": "48x48",
-    "type": "image/png"
-  }],
-  "related_applications": [{ "platform": "web" }]
+      "src": "https://domeniqque.github.io/tic-tac-toe/static/img/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "https://domeniqque.github.io/tic-tac-toe/static/img/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }]
 }
