--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@
   "background_color": "#fff",
   "description": "A web game.",
   "icons": [{
-      "src": "https://domeniqque.github.io/tic-tac-toe/static/img/icons/android-chrome-192x192.png",
+      "src": "https://sylviot.github.io/crystalrain-mobile/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://domeniqque.github.io/tic-tac-toe/static/img/icons/android-chrome-512x512.png",
+      "src": "https://sylviot.github.io/crystalrain-mobile/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }]
